Fixed overflow issue

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -116,6 +116,9 @@
 .timerbox {
 	position: relative;
 }
+.boomhtml {
+	overflow-x:hidden;
+}
 .boomdaddypage {
 	background-color:black;
 }
